Changes for 2.0.12rc1

New features:
.D........ [ZBX-7597] added description of the returned value types to the agentd manpage (Richlv)
A.F....... [ZBX-1357] updated Italian translation; thanks to Zabbix translators (Richlv)

Bug fixes:
A.F.....S. [ZBX-7674] implemented batch processing of IT services to resolve deadlocks and improve performance (Eduard, wiper)
........S. [ZBX-5789] improved performance of processing discovered graphs by the low-level discovery rule (Sasha)
........S. [ZBX-5789] fixed updating of low-level discovered graphs: the graph identifier never will change (Sasha)
A.F....... [ZBX-7708] fixed trigger prototype error message and trigger form default description value (Oleg)
..F....... [ZBX-7739] removed unused label in screen configuration page when no elements exist (Eduard)

--------------------------------------------------------------------------------
Changes for 2.0.11

2.0.11rc2 was released as 2.0.11 without any changes

--------------------------------------------------------------------------------
Changes for 2.0.11rc2

Bug fixes:
.......PS. [ZBX-7698] fixed closing a connection to the database when database server is unavailable (Sasha)
A......... [ZBX-7693] fixed admin user being able to update media for other users (Pavels)

--------------------------------------------------------------------------------
Changes for 2.0.11rc1

New features:
A.F....... [ZBX-1357] updated French, Italian, Japanese, Russian, Slovak and Ukrainian translations; thanks to Zabbix translators (Richlv)

Bug fixes:
..F....... [ZBX-7600] updated .htaccess files to be compatible with Apache 2.4 (Richlv)
....I..... [ZBX-7168] fixed configure.in template to properly link libcurl to all components independently (Juris)
A......... [ZBX-7703] fixed being able to switch users without proper credentials when using HTTP authentication (Pavels)
...G...... [ZBX-7648] fixed name resolution when using net.dns items (Juris)